# weathr

./: .gitignore  README.md  pyproject.toml
src/weathr/: api.py  cli.py  formatter.py  main.py  render.py
